# QRS-EL-CLI

./: .env.example  .gitignore  _patch_paper.py  _patch_paper2.py  _patch_paper3.py  _patch_paper4.py  _patch_paper5.py  architecture.md  benchmark_test.yml  paper.md  paper2.md  pyproject.toml  pytest.ini  qrs-el-bytechef.yml  requirements.txt  test_api_raw.py  文档.md
argus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/benchmark/: maven-settings-fast.xml
data/queries/java/: java_Command_Injection_2cfea9b7.ql  java_Command_Injection_b41d4d95.ql  (+33 more)
data/rule_memory/: rule_memory_index.json
frontend/: generate_sounds.py  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
scripts/: _check_cp.py  _eval_checkpoint.py  list_models.py  run_agent_r_on_sarif.py  sample_sarif.py  score_benchmark.py  test_model_speed.py
src/: main.py
src/agents/: agent_e.py  agent_p.py  agent_q.py  agent_r.py  agent_s.py  agent_t.py  base_agent.py
src/orchestrator/: coordinator.py  event_bus.py
src/utils/: binary_adapter.py  code_browser.py  codeql_runner.py  db_cache.py  dependency_analyzer.py  docker_manager.py  html_reporter.py  llm_factory.py  ql_template_library.py  repo_manager.py  result_exporter.py  result_store.py  rule_memory.py  scan_history.py  settings.py  vuln_catalog.py
src/web/: app.py  scan_manager.py
tests/: conftest.py  test_agent_q_mock.py  test_db_cache.py  test_integration_vulnerable_code.py  test_ql_template_library.py  test_result_exporter.py  test_rule_memory.py  test_scan_history.py
(+23 files in other folders)
